client/src/App.css
@font-face {
    font-family: "Geist";
    src: url('./components/fonts/Geist/Geist-Regular.otf');
    src: url('./components/fonts/Geist/Geist-Regular.otf') format('opentype'),
        url('./components/fonts/Geist/Geist-Regular.woff2') format('woff2');
}

@font-face {
    font-family: "Geist";
    src: url('./components/fonts/Geist/Geist-Bold.otf');
    src: url('./components/fonts/Geist/Geist-Bold.otf') format('opentype'),
        url('./components/fonts/Geist/Geist-Bold.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "Geist";
    src: url('./components/fonts/Geist/Geist-Thin.otf');
    src: url('./components/fonts/Geist/Geist-Thin.otf') format('opentype'),
        url('./components/fonts/Geist/Geist-Thin.woff2') format('woff2');
    font-weight: 100;
    font-style: normal;
}

@font-face {
    font-family: "Geist Mono";
    src: url('./components/fonts/Geist.Mono/GeistMono-Regular.otf');
    src: url('./components/fonts/Geist.Mono/GeistMono-Regular.otf') format('opentype'),
        url('./components/fonts/Geist.Mono/GeistMono-Regular.woff2') format('woff2');
}

:root {
    --kyogre: #194E8A;
    --deepsea: #4b8eda;
    --miku: #4adad0;
    --black: #000000;
    --smoke: #807f7f80;
    --white: #ffffff;
    --deepsmoke: #807f7fbb;
    --lugia: #dddddd;
    --jade: #640377;
    --text: #ec98e1;
    --emerald: #19bb98;
    --clear: #00000000;
}

body {
    height: 100vh;
    margin: 0;
    font-family: "Geist";
}

a {
    text-decoration: none;
    color: black;
    transition: ease-in-out 0.2s;
    font-weight: 100;
}

a:hover {
    color: var(--miku);
}

.footer {
    display: flex;
    justify-content: center;
    position: fixed;
    background: linear-gradient(var(--clear) 10%, var(--white) 20%);
    height: 3.5vh;
    padding-top: 1vh;
    z-index: 2;
    bottom: 0;
    left: 0;
    width: 100%;
    animation: fadeIn 1s;
}

.navbar {
    position: fixed;
    z-index: 3;
    top: 0;
    left: 25%;
    display: flex;
    justify-content: space-around;
    text-align: center;
    margin: 5px auto 0;
    border: solid 2px;
    border-radius: 8px;
    font-size: 1vw;
    width: 50%;
    animation: fadeIn 1s;
    background-color: white;
}

.name {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: "Geist";
    font-weight: bold;
    margin: 0;
    padding: 0;
    animation: fadeIn 2s;
    height: 100vh
}

.about-me {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    font-family: "Geist";
    padding-top: 15vh;
    height: fit-content;
    margin: 0 15%;
    animation: fadeIn 1.5s;
}

.about-me p {
    text-align: justify;
}

.resume-window{
    padding-top: 5vh;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    text-align: center;
    height: 100vh;
    margin: 0 10%;
    animation: fadeIn 1.5s;
}

.resume-pic {
    padding-top: 5vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: block;
    align-items: center;
    text-align: center;
    height: 100vh;
    animation: fadeIn 1.5s;
}

.resume-dl{
    padding-bottom: 10%;
}

.resume-dl a{
    display: flex;
    justify-content: center;
}


.resume-pic img {
    flex-grow: 1 0 50%;
    width: 100%;
    flex-direction: column;
}

.nav-link {
    margin: 10px;
}

.portfolio-container {
    display: flex;
    max-width: 100vw;
    flex-wrap: wrap;
    margin: auto;
    animation: fadeIn 1.5s;
    justify-content: center;
}

.project-card {
    flex: 1 0 25%;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    font-family: "Geist";
    border: solid 3px;
    border-radius: 8px;
    margin: 4.8vw;
    max-width: 41vw;
    transition: ease-in-out .3s;
    position: relative;
    z-index: 2;
    background-color: white;
    overflow: hidden;
}

.project-card img {
    width: 100%;
    height: 100%;
    transition: ease-in-out .3s;
}

.project-card:hover img {
    filter: blur(7px);
    opacity: .4;
}

.project-links {
    padding-top: 8vw;
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    bottom: 0;
    text-align: center;
    font-size: 1vw;
    width: 100%;
    opacity: 0;
    transition: ease-in-out 0.4s;
}

.project-card:hover .project-links {
    filter: blur(0px);
    opacity: 1;
    z-index: 1;
}

.project-card:hover .project-links #github-repo {
    filter: blur(0px);
    opacity: 1;
}

#github-repo {
    width: 30px;
    height: 30px;
}

.project-card:hover .project-links #github-repo:hover {
    opacity: 0.5;
}

.contact-window {
    height: 100vh;
    display: flex;
    justify-content: center;
    animation: fadeIn 1.5s;
    flex-direction: column;
}

.contact-card {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    border: solid 3px;
    border-radius: 8px;
    margin: auto auto;
    background-color: white;
}



.contact-card p,
.contact-form label,
.contact-form input,
.contact-form textarea,
.contact-form button {
    margin: 1vw;
}

.contact-form textarea {
    width: 15vw;
    height: 20vh;
}

.contact-form {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    border: solid 3px;
    border-radius: 8px;
    margin: 20px auto;
    background-color: white;
    width: 20vw;
}

.btn {
    text-align: center;
    display: inline-block;
    padding: 0.5rem 1.2rem;
    margin: 0;
    text-decoration: none;
    font-size: 1rem;
    font-weight: bold;
    border-radius: 0.3rem;
    border: 1px solid transparent;
    outline: none;
    color: white;
    background-color: black;
    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
    cursor: pointer;
}

.btn:hover {
    background-color: white;
    color: black;
}

#linkedin,
#email,
#github,
#stackoverflow {
    color: black;
    transition: ease-in-out .2s;
    margin: 0 .1vw;
    height: 3vh;
    width: 3vw;
}

#phone {
    color: black;
    transition: ease-in-out .2s;
    margin: 0 .1vw;
    height: 3.5vh;
    width: 3.5vw;
}

#linkedin:hover,
#email:hover,
#phone:hover,
#github:hover,
#stackoverflow:hover {
    color: var(--miku);
}

#zach-pic {
    width: 15%;
}

.error {
    color: red;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@media (max-width: 768px) {
    .portfolio-container {
        display: flex;
        max-width: 100vw;
        flex-wrap: wrap;
        margin: auto;
        animation: fadeIn 1.5s;
        padding-top: 5vh;
        padding-bottom: 6vh;
    }

    .project-card {
        flex: 1 0 90%;
        align-items: center;
        flex-wrap: wrap;
        flex-direction: column;
        font-family: "Geist";
        border: solid 3px;
        border-radius: 8px;
        margin: 4.8%;
        max-width: 90%;
        transition: ease-in-out .3s;
        position: relative;
    }

    .project-links {
        padding-top: 10vw;
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        text-align: center;
        font-size: 4vw;
        width: 100%;
        opacity: 0;
        transition: ease-in-out 0.4s;
    }

    .navbar {
        position: fixed;
        z-index: 3;
        top: 0;
        left: 5%;
        display: flex;
        justify-content: space-around;
        text-align: center;
        margin: 5px auto 0;
        border: solid 2px;
        border-radius: 8px;
        font-size: 3vw;
        width: 90%;
        animation: fadeIn 1s;
        background-color: white;
    }

    .about-me {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        text-align: center;
        font-family: "Geist";
        padding: 10vh 0;
        height: fit-content;
        margin: 0 15%;
        animation: fadeIn 1.5s;
    }

    #zach-pic {
        width: 40%;
    }

    #linkedin,
    #email,
    #phone,
    #github,
    #stackoverflow {
        color: black;
        transition: ease-in-out .2s;
        margin: 0 10vw;
        height: 7vh;
        width: 7vw;
    }

    .resume-dl{
        justify-content: center;
        padding-bottom: 5vh;
    }

    /* .resume-dl a{
        margin: auto;
        width: 7vw;
        height: 7vh;
    } */
    

    .resume-pic {
        padding-top: 1vh;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        flex-direction: block;
        align-items: center;
        text-align: center;
        height: 100vh;
        animation: fadeIn 1.5s;
    }

    .resume-pic img {
        flex-grow: 1 0 50%;
        width: 125%;
        flex-direction: column;
    }

    .contact-card p,
    .contact-form label,
    .contact-form input,
    .contact-form textarea,
    .contact-form button {
        margin: 5vw;
    }

    .footer {
        display: flex;
        justify-content: center;
        position: fixed;
        background: linear-gradient(var(--clear) 10%, var(--white) 20%);
        z-index: 2;
        bottom: 0;
        left: 0;
        width: 100%;
        height: fit-content;
        animation: fadeIn 1s;
    }
}

